--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,5 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+permalink: /:categories/:title.html
 exclude: [config.codekit3, notes.txt]
